2011-03-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-parse-flags): Remove all MODSEQ entries before
	parsing to avoid integer overflows.
	(nnimap-parse-flags): Simplify the last change.
	(nnimap-parse-flags): Store HIGHESTMODSEQ as a string, since it may be
	too large for 32-bit Emacsen.

2011-03-15  Nelson Ferreira  <nelson.ferreira@ieee.org>  (tiny change)

	* gnus-art.el (gnus-article-treat-body-boundary): Fix boundary width on
	XEmacs, which was one character too wide.

2011-03-09  Antoine Levitt  <antoine.levitt@gmail.com>

	* gnus-sum.el (gnus-articles-to-read): Use gnus-large-newsgroup as
	default number of articles to display.
	(gnus-articles-to-read): Use pretty names for prompt.

2011-03-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-int.el (gnus-open-server): Ditto.

	* gnus-start.el (gnus-activate-group): Give a backtrace if
	debug-on-quit is set and the user hits `C-g'.
	(gnus-read-active-file): Ditto.

	* gnus-group.el (gnus-group-read-ephemeral-group): Ditto.

2011-03-15  Teodor Zlatanov  <tzz@lifelogs.com>

	* message.el (message-yank-original): Use cond instead of CL case.

2011-03-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Fbind read-char-choice for XEmacs.

2011-03-13  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-netrc-create): Show the default in the
	prompt when prompting for token creation.

2011-03-12  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-source-format-prompt): Always convert the value
	to a string to avoid evaluating non-string arguments.
	(auth-source-netrc-create): Offer default properly, not as initial
	content in `read-string'.
	(auth-source-netrc-saver): Use a cache keyed by file name and MD5 hash
	of line to determine if we've been run before.  If so, don't run again,
	but print a trivial message to indicate the cache was hit instead.

2011-03-11  Teodor Zlatanov  <tzz@lifelogs.com>
